--- a/Time Table/popup.html
+++ b/Time Table/popup.html
@@ -21,10 +21,10 @@
             <a href="#" target="_blank">AFL</a>
             </div>
             <div class="m4 box">
-            <a href="https://meet.google.com/ffy-sxyg-ebr" target="_blank">PDC</a>
+            <a href="https://meet.google.com/jzz-wmhg-owy" target="_blank">PDC</a>
             </div>
             <div class="m5 box">
-            <a href="#" target="_blank">WT</a>
+            <a href="https://meet.google.com/zfv-bhyo-mqe" target="_blank">WT</a>
             </div>
             <div class="m6 box blank">
             <a href="#"></a>
@@ -45,7 +45,7 @@
             <a href="https://meet.google.com/vwn-kzhk-gjs" target="_blank">DBMS</a>
             </div>
             <div class="tu3 box">
-            <a href="https://meet.google.com/ffy-sxyg-ebr" target="_blank">PDC</a>
+            <a href="https://meet.google.com/jzz-wmhg-owy" target="_blank">PDC</a>
             </div>
             <div class="tu4 box">
             <a href="https://meet.google.com/emc-qpzx-bja" target="_blank">OS</a>
@@ -72,13 +72,13 @@
             <a href="https://meet.google.com/vwn-kzhk-gjs" target="_blank">DBMS</a>
             </div>
             <div class="w3 box">
-            <a href="https://meet.google.com/ffy-sxyg-ebr" target="_blank">PDC</a>
+            <a href="https://meet.google.com/jzz-wmhg-owy" target="_blank">PDC</a>
             </div>
             <div class="w4 box">
             <a href="#" target="_blank">COA</a>
             </div>
             <div class="w5 box">
-            <a href="#" target="_blank">WT</a>
+            <a href="https://meet.google.com/zfv-bhyo-mqe" target="_blank">WT</a>
             </div>
             <div class="w6 box blank">
             <a href="#"></a>
@@ -102,7 +102,7 @@
             <a href="#" target="_blank">AFL</a>
             </div>
             <div class="th4 box">
-            <a href="https://meet.google.com/ffy-sxyg-ebr" target="_blank">PDC</a>
+            <a href="https://meet.google.com/jzz-wmhg-owy" target="_blank">PDC</a>
             </div>
             <div class="th5 box">
             <a href="https://meet.google.com/vwn-kzhk-gjs" target="_blank">DBMS</a>
@@ -111,7 +111,7 @@
             <a href="#"></a>
             </div>
             <div class="th7 box">
-            <a href="#" target="_blank">WT</a>
+            <a href="https://meet.google.com/zfv-bhyo-mqe" target="_blank">WT</a>
             </div>
             <div class="th8 box">
             <a href="#" target="_blank">WT LAB</a>
